general clean up and fix card overlap

--- a/frontend/src/assets/global.css
+++ b/frontend/src/assets/global.css
@@ -68,9 +68,6 @@ h4 {
   padding-right: 5rem;
 }
 
-.center {
-  height: 90vh;
-  align-items: center;
-  justify-content: center;
-  display: flex;
+.main-card {
+  border-radius: 1rem;
 }
